# pyelink_connector

./: .gitignore  README.md  pyproject.toml  testPsychopy.py
examples/: README.md  examplePsychopy.py  examplePygame.py  examplePyglet.py
src/: README.md
src/pyelink_connector/: utils.py
src/pyelink_connector/psychopy/: connector.py  utils.py
src/pyelink_connector/pygame/: connector.py  utils.py
src/pyelink_connector/pyglet/: connector.py  utils.py
